...
  private var favoriteButton: some View {
    Button {
      store.send(.favoriteTapped)
    } label: {
      if store.movie.favorite {
        Image(systemName: "star.fill")
          .accessibilityLabel("unfavorite movie")
          .foregroundStyle(Utils.favoriteColor)
          .transition(.confetti(color: Utils.favoriteColor, size: 3, enabled: store.animateButton))
      } else {
        Image(systemName: "star")
          .accessibilityLabel("favorite movie")
      }
    }
  }
}

private struct ActorsListView: View {
...
